Fix align of card component

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,7 +47,7 @@ a,
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
-  justify-content: flex-start;
+  justify-content: center;
   padding: 60px 0;
 }
 
